[package]
name = "sidle"
version = "0.1.0"
authors = ["Sean Policarpio <sean@policarp.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kdrakon/sidle"
keywords = ["cli"]
edition = "2018"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
termion = "1.5.3"
clap = "2.33.0"

